--- a/main.css
+++ b/main.css
@@ -1,16 +1,45 @@
 * {
-    background-color: brown;
     color: gold;
     margin: 10px 50px 10px ;
     padding: center;
 }
-.navbar
+
+.backgroundcolour{
+    background-color: brown;
+}
+.opacity1
 {
+    background-color: rgba(0, 0, 0, 0.7);
+    width: fit-content;
+
+}
+#cardstable table, th, td
+{
+    background-color: rgba(0, 0, 0, 0.7);
     text-align: center;
     padding: center;
+    border: 1px solid black;
+    border-collapse: collapse;
+    border-width: 2px;
+    padding: 10px;
+}
+
+.navbar
+{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 50px;
+    text-align: center;
+    padding: center;
+    margin: auto;
+    background-color: rgba(0, 0, 0, 0.7);
+    width: fit-content;
 }
 h1 {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    margin: auto;
+    background-color: rgba(0, 0, 0, 0.7);
+    width: fit-content;
 }
 .picmiddle img 
 {
@@ -49,4 +78,11 @@ p {
 footer {
     text-align: center;
     padding: center;
+}
+
+#personalpage
+{
+    background-image: url(images/Recruit.png);
+    background-repeat: repeat;
+    background-size: auto;
 }
