--- a/main.css
+++ b/main.css
@@ -1,7 +1,15 @@
 * {
-    color: gold;
     margin: 0px 50px 0px ;
     padding: center;
+}
+
+p
+{
+    color: darkturquoise;
+}
+h1,h2,h3
+{
+    color: gold;
 }
 
 .backgroundcolour{
@@ -19,14 +27,56 @@ footer
     padding: center;
     font-size: 25px;    
 }
+
+h1
+{
+font-size: 50px;
+}
+
+h2
+{
+font-size: 50px;
+}
+
+h3
+{
+font-size: 30px;
+}
+p
+{
+    font-size: 20px;
+}
+
+#unit1link, #unit2link
+{
+    color: gold;
+}
+#unit1
+{
+    border: 10px solid black;
+    border-width: 10px;
+    }
+
+
+
+#unit2
+{
+    border: 10px solid black;
+    border-width: 10px;
+}
+
+h1, h2, h3
+{
+    padding: center;
+    border: 10px solid burlywood;
+    border-collapse: collapse;
+    padding: 10px;
+}
 h1, h2, h3, p
 {
     background-color: rgba(0, 0, 0, 0.7);
     text-align: center;
-    padding: center;
-    border: 1px solid black;
-    border-width: 2px;
-    padding: 10px;
+    margin: 0px;
 }
 #cardstable table, th, td
 {
